--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ var TxtType = function(el, toRotate, period) {
 
  /*listen to story buttons*/ 
  <div id="audioButton" class="bottomRight">
-   <button class="btn" type="round-button" onclick="showAud()"><i class="fa fa-play"></i></button>  <button class="btn2">LISTEN TO STORY</button>
+   <button class="btn" type="round-button" onclick="showAud()"><i class="fa fa-play"></i></button>  <button class="btn2" onclick="showAud()">LISTEN TO STORY</button>
   </div>
 
 </html>
