--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@ var TxtType = function(el, toRotate, period) {
        }
   document.getElementById("audioClip").play();
   }
-  
 </script>
 
 <h1>
@@ -152,21 +151,21 @@ var TxtType = function(el, toRotate, period) {
   </a>
 </h1>
   
-/*desktop html audio component with default size*/  
+<!--desktop html audio component with default size-->
 <div id="audioShow" style="display:none;" class="bottomRight">
 <audio id="audioClip" controls>
   <source src="https://s3.amazonaws.com/mobile.engineering.com/audio/19559.mp3" type="audio/mpeg">
 </audio>
   </div>
   
-/*mobile html audio component limited to 250 px*/   
+<!--mobile html audio component limited to 250 px-->   
 <div id="audioShowMobile" style="display:none;" class="bottomRight">
 <audio id="audioClip" controls style="width:250px">
   <source src="https://s3.amazonaws.com/mobile.engineering.com/audio/19559.mp3" type="audio/mpeg">
 </audio>
 </div>
-
- /*listen to story buttons*/ 
+  
+ <!--listen to story buttons-->
  <div id="audioButton" class="bottomRight">
    <button class="btn" type="round-button" onclick="showAud()"><i class="fa fa-play"></i></button>  <button class="btn2" onclick="showAud()">LISTEN TO STORY</button>
   </div>
